--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Guapi</string>
-    <string name="title_activity_maps">Map</string>
+    <string name="app_name" translatable="false">Guapi</string>
+    <string name="title_activity_maps" translatable="false">Map</string>
 </resources>
