--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="default_info_snippet">No places found, because location permission is disabled.</string>
     <string name="option_get_place">Get place</string>
     <string name="pick_place">Choose a place</string>
+    <string name="location_permission_denied">denied</string>
+    <string name="permission_required_toast">require</string>
+    <string name="permission_rationale_location">rationale</string>
 </resources>
